--- a/public/tags/templates/index.html
+++ b/public/tags/templates/index.html
@@ -15,7 +15,7 @@
 
 <title>
     
-    Templates :: B Siddhartha🚀  — Hello Friend NG Theme
+    Templates :: B Siddhartha🚀 
     
 </title>
 
@@ -80,7 +80,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="/about/">About</a></li><li><a href="/posts/">Posts</a></li>
+    <ul class="menu__inner"><li><a href="/about/">About</a></li><li><a href="/projects/">Projects</a></li><li><a href="/posts/">Posts</a></li>
     </ul>
 </nav>
 
@@ -108,13 +108,19 @@
     <main class="posts">
         <h1>Templates</h1>
             <div class="posts-group">
-                <div class="post-year">2014</div>
+                <div class="post-year">2019</div>
 
                 <ul class="posts-list">
                         <li class="post-item">
-                            <a href="/posts/2014/04/hugo-template-primer/">
-                                <span class="post-title">(Hu)go Template Primer</span>
-                                <span class="post-day">Apr 2</span>
+                            <a href="/posts/2019/03/template-posts/">
+                                <span class="post-title">Template Posts</span>
+                                <span class="post-day">Mar 17</span>
+                            </a>
+                        </li>
+                        <li class="post-item">
+                            <a href="/projects/2019/03/template/">
+                                <span class="post-title">Template</span>
+                                <span class="post-day">Mar 17</span>
                             </a>
                         </li>
                 </ul>
